# Paper2code

./: .gitignore  LICENSE  README.md  README_cn.md  pyproject.toml
src/paper2code/: config.py  paper2code_function.py  paper_analyzing.py  paper_coding.py  paper_planning.py  register.py  tex2json.py
src/paper2code/configs/: config.yml
